multitask-gateway.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: multitask-gateway
# spec:
#   selector:
#     istio: ingressgateway # use istio default controller
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - "*"
# ---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: multitask
spec:
  hosts:
  - "*"
  gateways:
  - multitask-gateway
  http:
  - match:
    - uri:
        exact: /vgg16
    route:
    - destination:
        host: vgg16-0
        port:
          number: 5000
